Finished draft of background information.

--- a/bioinformatica/publications/Hou2018/Hou2018.tex
+++ b/bioinformatica/publications/Hou2018/Hou2018.tex
@@ -194,24 +194,114 @@
 %	Slide #1
 \frame
 {
-	\frametitle{Problem Definition and Importance}
-	\framesubtitle{What is the problem that \cite{Hou2018} is solving? Why is it important?}
+	\frametitle{Context of the Problem}
+	\framesubtitle{Background Information}
 
-	Describe the problem.
-	\begin{itemize}
-	\item 
-	\end{itemize}
+	Context of the problem.
+	\begin{enumerate}
+	\item The structures of most ($>99\%$) proteins are unknown % (pp. 1296, left column, paragraph 1)
+	\item Protein fold recognition enables us to associate a protein sequence to a protein fold
+		\begin{itemize}	% (pp. 1296, left column, paragraph 1)
+		\item With this protein fold, determine its protein structure
+		\item With this protein structure, determine its protein function	{\Huge Insert References!!!}
+%			\begin{itemize}
+%			\item DOIs: 10.1073/pnas.1102727108 and 10.1006/jmbi.1999.2661
+%			\item https://www.nature.com/scitable/ebooks/essentials-of-cell-biology-14749010/122996920/
+%			\item https://www.nature.com/scitable/ebooks/cell-biology-for-seminars-14760004/122995569/
+%			\item DOI:%10.1007/0-306-48662-8_2
+%			\item https://www.ncbi.nlm.nih.gov/books/NBK21177/
+%			\end{itemize}
+		\item Knowing about protein function facilitates {\Huge Insert References!!!}:
+			\begin{itemize}
+			\item drug/medication design
+			\item biotechnology
+			\item synthetic biology
+			\item personalized/precision medicine
+			\end{itemize}
+		\end{itemize}
+	\end{enumerate}
+
+%Other resources:
+%+ https://socratic.org/questions/what-is-the-relationship-between-a-protein-s-structure-and-its-ability-to-functi
+
+
+}
+
+
+%Resources for background information:
+%+ https://en.wikipedia.org/wiki/Bioinformatics
+%+ https://en.wikipedia.org/wiki/Structural_bioinformatics
+%+ https://en.wikipedia.org/wiki/Sequence_homology
+%+ https://en.wikipedia.org/wiki/Structural_genomics
+%+ https://en.wikipedia.org/wiki/Protein_structure_prediction
+%	``[protein structure prediction is] the inverse problem of protein design''
+%	``Protein structure prediction is one of the most important goals pursued by bioinformatics and theoretical chemistry; it is highly important in medicine (for example, in drug design) and biotechnology (for example, in the design of novel enzymes).''
+%	https://en.wikipedia.org/wiki/Drug_design
+%+ https://en.wikipedia.org/wiki/Functional_genomics
+%+ https://en.wikipedia.org/wiki/Genomics
+%+ https://en.wikipedia.org/wiki/Biotechnology
+
+
+
+
+
+
+
+%	Slide #2
+\frame
+{
+	\frametitle{Problem Definition and Importance}
+	\framesubtitle{What is the problem that \cite{Hou2018} is solving?}
+
+	Problem description.
+	\begin{enumerate}
+	\item Sequence-alignment methods for mapping protein sequences to protein folds are indirect  % (abstract)
+	\item Protein fold recognition enables us to associate a protein sequence to a protein fold
+		\begin{itemize}	% (pp. 1296, left column, paragraph 1)
+		\item With this protein fold, we can determine its protein structure
+		\item With this protein structure, we can determine its protein function
+			\begin{itemize}		%	{\Huge Insert References!!!}
+			\item DOI:10.1073/pnas.1102727108
+			\item https://www.nature.com/scitable/ebooks/essentials-of-cell-biology-14749010/122996920/
+			\item https://www.nature.com/scitable/ebooks/cell-biology-for-seminars-14760004/122995569/
+			\item DOI:%10.1007/0-306-48662-8_2
+			\item https://www.ncbi.nlm.nih.gov/books/NBK21177/
+			\item DOI:10.1006/jmbi.1999.2661
+			\end{itemize}
+		\end{itemize}
+	\end{enumerate}
+
+%Other resources:
+%+ https://socratic.org/questions/what-is-the-relationship-between-a-protein-s-structure-and-its-ability-to-functi
+
+
+}
+
+
+
+
+%	Slide #2
+\frame
+{
+	\frametitle{Problem Importance}
+	\framesubtitle{Why is it important?}
 
 
 	Why is this problem important?
 	\begin{itemize}
-	\item 
+	\item This facilitates protein structure prediction, which is important for drug/medication design and biotechnology.
 	\end{itemize}
 }
 
 
 
-%	Slide #2
+
+
+
+
+
+
+%	Slide #3
 \frame
 {
 	\frametitle{What are the Knowledge Gaps in \cite{Hou2018}?}
@@ -223,6 +313,22 @@
 	\end{itemize}
 
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -232,33 +338,34 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%	Problem and Knowledge Gap
+%	Proposed Solution(s)
 
-\section{Problem and Knowledge Gap}
+\section{Proposed Solution(s)}
 
 
 %	Slide #1
 \frame
 {
-	\frametitle{Problem Definition}
-	\framesubtitle{What is the problem that \cite{Hou2018} is solving?}
+	\frametitle{Proposed Solution(s) - 1}
+	\framesubtitle{What do they proposed to address the knowledge gap?}
 
-	Describe the problem.
+	Proposed Solution(s).
 	\begin{itemize}
 	\item 
 	\end{itemize}
 
 }
+
 
 
 
 %	Slide #2
 \frame
 {
-	\frametitle{What are the Knowledge Gaps in \cite{Hou2018}?}
-	\framesubtitle{How would \cite{Hou2018} address these knowledge gaps?}
+	\frametitle{Proposed Solution(s) - 2}
+	\framesubtitle{What do they proposed to address the knowledge gap?}
 
-	List of knowledge gaps:
+	Proposed Solution(s).
 	\begin{itemize}
 	\item 
 	\end{itemize}
@@ -269,6 +376,53 @@
 
 
 
+
+
+
+
+
+
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%	Experimental Results
+
+\section{Experimental Results}
+
+
+%	Slide #1
+\frame
+{
+	\frametitle{Experimental Results - 1}
+	\framesubtitle{How do their proposed solutions compare with existing solutions?}
+
+	Experimental Results - 1.
+	\begin{itemize}
+	\item 
+	\end{itemize}
+
+}
+
+
+
+
+
+
+
+
+%	Slide #2
+\frame
+{
+	\frametitle{Experimental Results - 2}
+	\framesubtitle{How do their proposed solutions compare with existing solutions?}
+
+	Experimental Results - 2.
+	\begin{itemize}
+	\item 
+	\end{itemize}
+
+}
 
 
 
