Finished draft of background information.

--- a/bioinformatica/publications/Hou2018/Hou2018.tex
+++ b/bioinformatica/publications/Hou2018/Hou2018.tex
@@ -203,20 +203,13 @@
 	\item Protein fold recognition enables us to associate a protein sequence to a protein fold
 		\begin{itemize}	% (pp. 1296, left column, paragraph 1)
 		\item With this protein fold, determine its protein structure
-		\item With this protein structure, determine its protein function	{\Huge Insert References!!!}
-%			\begin{itemize}
-%			\item DOIs: 10.1073/pnas.1102727108 and 10.1006/jmbi.1999.2661
-%			\item https://www.nature.com/scitable/ebooks/essentials-of-cell-biology-14749010/122996920/
-%			\item https://www.nature.com/scitable/ebooks/cell-biology-for-seminars-14760004/122995569/
-%			\item DOI:%10.1007/0-306-48662-8_2
-%			\item https://www.ncbi.nlm.nih.gov/books/NBK21177/
-%			\end{itemize}
-		\item Knowing about protein function facilitates {\Huge Insert References!!!}:
+		\item With this protein structure, determine its protein function	%	{\Huge Insert References!!!}
 			\begin{itemize}
-			\item drug/medication design
-			\item biotechnology
-			\item synthetic biology
-			\item personalized/precision medicine
+			\item DOIs: 10.1073/pnas.1102727108 and 10.1006/jmbi.1999.2661
+			\item https://www.nature.com/scitable/ebooks/essentials-of-cell-biology-14749010/122996920/
+			\item https://www.nature.com/scitable/ebooks/cell-biology-for-seminars-14760004/122995569/
+			\item DOI:%10.1007/0-306-48662-8_2
+			\item https://www.ncbi.nlm.nih.gov/books/NBK21177/
 			\end{itemize}
 		\end{itemize}
 	\end{enumerate}
@@ -250,12 +243,15 @@
 %	Slide #2
 \frame
 {
-	\frametitle{Problem Definition and Importance}
+	\frametitle{Problem Definition}
 	\framesubtitle{What is the problem that \cite{Hou2018} is solving?}
 
 	Problem description.
 	\begin{enumerate}
 	\item Sequence-alignment methods for mapping protein sequences to protein folds are indirect  % (abstract)
+		\begin{itemize}
+		\item Can't explain relationship between protein sequences \& protein folds
+		\end{itemize}
 	\item Protein fold recognition enables us to associate a protein sequence to a protein fold
 		\begin{itemize}	% (pp. 1296, left column, paragraph 1)
 		\item With this protein fold, we can determine its protein structure
@@ -289,7 +285,15 @@
 
 	Why is this problem important?
 	\begin{itemize}
-	\item This facilitates protein structure prediction, which is important for drug/medication design and biotechnology.
+	\item This facilitates protein structure prediction
+	\item Protein structure prediction enables protein function prediction
+	\item Knowing about protein function facilitates: {\Huge Insert References!!!}
+			\begin{itemize}
+			\item drug/medication design
+			\item biotechnology
+			\item synthetic biology
+			\item personalized/precision medicine
+			\end{itemize}
 	\end{itemize}
 }
 
