Add references for background information.

--- a/bioinformatica/publications/Hou2018/references.bib
+++ b/bioinformatica/publications/Hou2018/references.bib
@@ -1,12 +1,59 @@
+@misc{OConnor2014a,
+	Address = {Cambridge, {MA}},
+	Author = {Clare {O'Connor} and Jill U. Adams and Jennifer Fairman},
+	Howpublished = {Available online from {\it Springer Nature Group: Nature Research: Nature Education: Scitable: Library: eBooks: Cell Biology} at: \url{https://www.nature.com/scitable/ebooks/cell-biology-for-seminars-14760004/}; March 25, 2020 was the last accessed date},
+	Month = {January 17},
+	Publisher = {Nature Education},
+	School = {},
+	Title = {Cell Biology for Seminars},
+	Url = {https://www.nature.com/scitable/ebooks/cell-biology-for-seminars-14760004/},
+	Year = {2014}}
 
+@book{OConnor2010,
+	Address = {Cambridge, {MA}},
+	Author = {Clare {O'Connor} and Jill U. Adams and Jennifer Fairman},
+	Doi = {},
+	Edition = {},
+	Month = {},
+	Publisher = {Nature Publishing Group Education},
+	Series = {},
+	Title = {Essentials of Cell Biology},
+	Url = {https://www.nature.com/scitable/ebooks/essentials-of-cell-biology-14749010/},
+	Volume = {},
+	Year = {2010}}
 
+@book{OConnor2014,
+	Address = {Cambridge, {MA}},
+	Author = {Clare {O'Connor} and Jill U. Adams and Jennifer Fairman},
+	Doi = {},
+	Edition = {},
+	Howpublished = {Available online from {\it Springer Nature Group: Nature Research: Nature Education: Scitable: Library: eBooks: Cell Biology} at: \url{https://www.nature.com/scitable/ebooks/essentials-of-cell-biology-14749010/}; March 25, 2020 was the last accessed date},
+	Month = {January 17},
+	Publisher = {Nature Education},
+	Series = {},
+	Title = {Essentials of Cell Biology},
+	Url = {https://www.nature.com/scitable/ebooks/essentials-of-cell-biology-14749010/},
+	Volume = {},
+	Year = {2014}}
+
+@article{Osadchy2011,
+	Address = {Washington, {D.C.}},
+	Author = {Margarita Osadchy and Rachel Kolodny},
+	Doi = {https://dx.doi.org/10.1073/pnas.1102727108},
+	Journal = {Proceedings of the National Academy of Sciences of the United States of America},
+	Month = {July 26},
+	Number = {30},
+	Pages = {12301--12306},
+	Publisher = {National Academy of Sciences of the United States of America},
+	Title = {Maps of protein structure space reveal a fundamental relationship between protein structure and function},
+	Volume = {108},
+	Year = {2011}}
 
 @article{Hou2018,
 	Address = {Oxford, {U.K.}},
 	Author = {Jie Hou and Badri Adhikari and Jianlin Cheng},
 	Doi = {https://dx.doi.org/10.1093/bioinformatics/btx780},
 	Journal = {Bioinformatics},
-	Keywords = {deep CNN, deep convolutional neural networks, deep neural networks, deep learning, deep learning algorithms, deep learning architectures, deep learning for bioinformatics, CNN, convolutional neural networks, bioinformatics, protein sequences, protein sequence to protein fold mapping, mapping of protein sequence to protein fold},
 	Month = {April 15},
 	Number = {8},
 	Pages = {1295--1303},
