--- a/bioinformatica/publications/Hou2018/references.bib
+++ b/bioinformatica/publications/Hou2018/references.bib
@@ -1,3 +1,31 @@
+
+@inproceedings{Tramontano2003,
+	Address = {Rovinj, Istria county, Croatia},
+	Author = {Anna Tramontano and Domenico Cozzetto},
+	Booktitle = {Supramolecular Structure and Function 8},
+	Doi = {https://dx.doi.org/10.1007/0-306-48662-8_2},
+	Month = {September 14--26},
+	Organization = {Rudjer Bo{\u{s}}kovi{\'{c}} Institute and Croatian Biophysical Society},
+	Pages = {15--29},
+	Publisher = {Kluwer Academic / Plenum Publishers},
+	Series = {Proceedings of the International Summer Schools on Biophysics},
+	Title = {The Relationship Between Protein Sequence, Structure and Function: Protein Function Prediction},
+	Volume = {8},
+	Year = {2003}}
+
+@proceedings{PifatMrzljak2003,
+	Address = {Rovinj, Istria county, Croatia},
+	Author = {Greta {Pifat-Mrzljak}},
+	Doi = {https://dx.doi.org/10.1007/b114450},
+	Month = {September 14--26},
+	Organization = {Rudjer Bo{\u{s}}kovi{\'{c}} Institute and Croatian Biophysical Society},
+	Publisher = {Kluwer Academic / Plenum Publishers},
+	Series = {Proceedings of the International Summer Schools on Biophysics},
+	Title = {Supramolecular Structure and Function 8},
+	Volume = {8},
+	Year = {2003},
+	Annote = {When citing from this entry, shift the names of the authors from the author field to the editor field.}}
+
 @misc{OConnor2014a,
 	Address = {Cambridge, {MA}},
 	Author = {Clare {O'Connor} and Jill U. Adams and Jennifer Fairman},
