--- a/bioinformatica/publications/Hou2018/Hou2018.tex
+++ b/bioinformatica/publications/Hou2018/Hou2018.tex
@@ -205,11 +205,11 @@
 		\item With this protein fold, determine its protein structure
 		\item With this protein structure, determine its protein function	%	{\Huge Insert References!!!}
 			\begin{itemize}
-			\item $[$Osadchy2011,OConnor2010,Tramontano2003$]$
+			\item $[$Osadchy2011,OConnor2010,Tramontano2003,PifatMrzljak2003$]$
 			\item $[$OConnor2014a, \href{https://www.nature.com/scitable/ebooks/cell-biology-for-seminars-14760004/122995569/}{From Contents: Unit 2, How Do Cells Decode Genetic Information into Functional Proteins?: \S2.4 The Functions of Proteins Are Determined by Their Three-Dimensional Structures}$]$
 			\item $[$OConnor2014, \href{https://www.nature.com/scitable/ebooks/cell-biology-for-seminars-14760004/122995569/}{From Contents: Unit 2, How Do Cells Decode Genetic Information into Functional Proteins?: \S2.4 The Functions of Proteins Are Determined by Their Three-Dimensional Structures}$]$
 			\item DOIs: 10.1006/jmbi.1999.2661
-			\item $[$PifatMrzljak2004, $]$
+			\item $[$???, $]$
 			\item https://www.nature.com/scitable/ebooks/essentials-of-cell-biology-14749010/122996920/
 			\item https://www.nature.com/scitable/ebooks/cell-biology-for-seminars-14760004/122995569/
 			\item DOI:%10.1007/0-306-48662-8_2
