Fix references for background information.

--- a/bioinformatica/publications/Hou2018/Hou2018.tex
+++ b/bioinformatica/publications/Hou2018/Hou2018.tex
@@ -191,6 +191,7 @@
 \section{Problem and Knowledge Gap}
 
 
+
 %	Slide #1
 \frame
 {
@@ -202,18 +203,12 @@
 	\item The structures of most ($>99\%$) proteins are unknown % (pp. 1296, left column, paragraph 1)
 	\item Protein fold recognition enables us to associate a protein sequence to a protein fold
 		\begin{itemize}	% (pp. 1296, left column, paragraph 1)
-		\item With this protein fold, determine its protein structure
+		\item With this protein fold, determine its protein structure $[$Tramontano2003$]$
 		\item With this protein structure, determine its protein function	%	{\Huge Insert References!!!}
 			\begin{itemize}
-			\item $[$Osadchy2011,OConnor2010,Tramontano2003,PifatMrzljak2003$]$
+			\item $[$Osadchy2011,OConnor2010,Tramontano2003,Hegyi1999$]$
 			\item $[$OConnor2014a, \href{https://www.nature.com/scitable/ebooks/cell-biology-for-seminars-14760004/122995569/}{From Contents: Unit 2, How Do Cells Decode Genetic Information into Functional Proteins?: \S2.4 The Functions of Proteins Are Determined by Their Three-Dimensional Structures}$]$
-			\item $[$OConnor2014, \href{https://www.nature.com/scitable/ebooks/cell-biology-for-seminars-14760004/122995569/}{From Contents: Unit 2, How Do Cells Decode Genetic Information into Functional Proteins?: \S2.4 The Functions of Proteins Are Determined by Their Three-Dimensional Structures}$]$
-			\item DOIs: 10.1006/jmbi.1999.2661
-			\item $[$???, $]$
-			\item https://www.nature.com/scitable/ebooks/essentials-of-cell-biology-14749010/122996920/
-			\item https://www.nature.com/scitable/ebooks/cell-biology-for-seminars-14760004/122995569/
-			\item DOI:%10.1007/0-306-48662-8_2
-			\item https://www.ncbi.nlm.nih.gov/books/NBK21177/
+			\item $[$OConnor2014, \href{ https://www.nature.com/scitable/ebooks/essentials-of-cell-biology-14749010/122996920/}{From Contents: Unit 2, How Do Cells Decode Genetic Information into Functional Proteins?: \S2.4 The Functions of Proteins Are Determined by Their Three-Dimensional Structures}$]$
 			\end{itemize}
 		\end{itemize}
 	\end{enumerate}
@@ -261,12 +256,7 @@
 		\item With this protein fold, we can determine its protein structure
 		\item With this protein structure, we can determine its protein function
 			\begin{itemize}		%	{\Huge Insert References!!!}
-			\item DOI:10.1073/pnas.1102727108
-			\item https://www.nature.com/scitable/ebooks/essentials-of-cell-biology-14749010/122996920/
-			\item https://www.nature.com/scitable/ebooks/cell-biology-for-seminars-14760004/122995569/
-			\item DOI:%10.1007/0-306-48662-8_2
-			\item https://www.ncbi.nlm.nih.gov/books/NBK21177/
-			\item DOI:10.1006/jmbi.1999.2661
+			\item 
 			\end{itemize}
 		\end{itemize}
 	\end{enumerate}
