--- a/bioinformatica/publications/Hou2018/references.bib
+++ b/bioinformatica/publications/Hou2018/references.bib
@@ -1,3 +1,28 @@
+@article{Sutcliffe2004,
+	Address = {Holborn, London, U.K..},
+	Author = {Mike Sutcliffe},
+	Doi = {https://dx.doi.org/10.1042/BIO02604013},
+	Journal = {The Biochemist},
+	Month = {August},
+	Number = {4},
+	Pages = {13--16},
+	Publisher = {Biochemical Society},
+	Title = {Relationship between protein structure and function: Valuable insight from computational studies},
+	Volume = {26},
+	Year = {2004}}
+
+@article{Hegyi1999,
+	Address = {San Diego, {CA}},
+	Author = {Hedi Hegyi and Mark Gerstein},
+	Doi = {https://dx.doi.org/10.1006/jmbi.1999.2661},
+	Journal = {Journal of Molecular Biology},
+	Month = {April 23},
+	Number = {1},
+	Pages = {147--164},
+	Publisher = {Academic Press},
+	Title = {The relationship between protein structure and function: a comprehensive survey with application to the yeast genome},
+	Volume = {288},
+	Year = {1999}}
 
 @inproceedings{Tramontano2003,
 	Address = {Rovinj, Istria county, Croatia},
