Fix references for background information.

--- a/bioinformatica/publications/Hou2018/Hou2018.tex
+++ b/bioinformatica/publications/Hou2018/Hou2018.tex
@@ -281,12 +281,14 @@
 	\begin{itemize}
 	\item This facilitates protein structure prediction
 	\item Protein structure prediction enables protein function prediction
-	\item Knowing about protein function facilitates: {\Huge Insert References!!!}
+	\item Knowing about protein structure and function facilitates: {\Huge Insert References!!!}
 			\begin{itemize}
-			\item drug/medication design
+			\item drug/medication design $[$Nogrady2005, \S1.6.4, pp. 54$]$
+				% \cite[\S1.6.4, pp. 54]{Nogrady2005}, application of quantum pharmacology to macromolecular modeling to perform protein structure prediction
+				% \cite{Wecker2010}
 			\item biotechnology
 			\item synthetic biology
-			\item personalized/precision medicine
+			\item personalized/precision medicine, such as gene therapy $[$Wecker2010, Chapter 5, pp. 51$]$
 			\end{itemize}
 	\end{itemize}
 }
@@ -294,8 +296,58 @@
 
 
 
+%	protein structure prediction
+%+ DOI:10.1109/ICBBT.2010.5479021
+%+ DOI:10.1038/nbt.2419
+%+ DOI:10.1007/978-3-319-41279-5_7
+%	structure-based methods for protein function prediction, but did not mention anything about the relationship between them or mention it
 
 
+%Prediction of Protein Structures, Functions, and Interactions
+%	https://www.google.com/books/edition/Prediction_of_Protein_Structures_Functio/VWJDuuF5hsgC?hl=en&gbpv=0
+
+%	https://books.google.com/books?hl=en&lr=&id=LeRhAoz4NwEC&oi=fnd&pg=PA1&dq=%22protein+structure+prediction%22+survey&ots=yB8g0y4JO2&sig=l-SZkUY2PO525v88x1WrXbP4wT0#v=onepage&q=%22protein%20structure%20prediction%22%20survey&f=false
+%	https://www.google.com/books/edition/Introduction_to_Protein_Structure_Predic/LeRhAoz4NwEC?hl=en&gbpv=1&dq=%22protein+structure+prediction%22&printsec=frontcover
+%	https://www.google.com/books/edition/Introduction_to_Protein_Structure_Predic/5WnNjwEACAAJ?hl=en
+%	https://www.google.com/books/edition/Protein_Structure_Prediction/C6XgZJRrFsYC?hl=en&gbpv=1&dq=%22protein+structure+prediction%22&printsec=frontcover
+%	https://www.google.com/books/edition/Protein_Folding_in_Silico/9XRHAgAAQBAJ?hl=en&gbpv=1&dq=%22protein+structure+prediction%22&printsec=frontcover
+%	https://www.google.com/books/edition/Prediction_of_Protein_Structures_Functio/VWJDuuF5hsgC?hl=en&gbpv=1&dq=%22protein+structure+prediction%22&printsec=frontcover
+%	https://www.google.com/books/edition/Protein_Structure_Prediction/7qnvvQAACAAJ?hl=en
+%	https://link.springer.com/search?query=%22Protein+Structure+Prediction%22&facet-content-type=%22Book%22
+%		https://link.springer.com/book/10.1007/978-1-4939-0366-5 (not a textbook)
+%https://link.springer.com/book/10.1007/978-1-59745-574-9
+%https://link.springer.com/book/10.1007/978-1-59745-574-9
+
+%https://www.google.com/books/edition/Protein_Structure_Prediction/C6XgZJRrFsYC?hl=en&gbpv=0
+%https://www.google.com/books/edition/Protein_Structure_Prediction/7qnvvQAACAAJ?hl=en
+
+%	https://www.google.com/books/edition/Protein_Structure/-DxTZ8ufPzQC?hl=en&gbpv=1&dq=%22protein+function%22+%22drug+design%22&printsec=frontcover
+%		https://www.taylorfrancis.com/books/9780429213564
+%		https://www.crcpress.com/Protein-Structure-Determination-Analysis-and-Applications-for-Drug-Discovery/author/p/book/9780203911327
+
+%	https://www.google.com/books/edition/Introduction_to_Proteins/-4ZXDwAAQBAJ?hl=en&gbpv=1&dq=%22protein+function%22+%22drug+design%22&printsec=frontcover
+
+
+%	https://www.google.com/books/edition/Protein_Engineering_and_Design/ycVoWFqDTmAC?hl=en&gbpv=1&dq=pharmacology+%22protein+structure%22&printsec=frontcover
+
+
+
+%	https://books.google.com/books?id=EkxCWOoYB2wC&newbks=0&printsec=frontcover&pg=PA54&dq=pharmacology+%22protein+structure%22&hl=en&source=newbks_fb#v=onepage&q=pharmacology%20%22protein%20structure%22&f=false
+%		application of quantum pharmacology to macromolecular modeling to perform protein structure prediction
+%	\S1.6.4, pp. 54
+
+
+%https://www.google.com/books/edition/Encyclopedia_of_Molecular_Pharmacology/iwwo5gx8aX8C?hl=en&gbpv=1&kptab=overview
+%https://link.springer.com/referencework/10.1007%2F978-3-540-38918-7
+
+
+%https://www.google.com/books/edition/Pharmacology_of_G_Protein_Coupled_Recept/nP7sGtuaRBEC?hl=en&gbpv=0&kptab=getbook
+%https://www.elsevier.com/books/pharmacology-of-g-protein-coupled-receptors/enna/978-0-12-385952-5
+%https://www.amazon.com/s?k=9780123859532&i=stripbooks&linkCode=qs
+
+
+%https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4671355/
+%https://www.frontiersin.org/articles/10.3389/fcvm.2015.00014/full
 
 
 
