--- a/bioinformatica/publications/Hou2018/references.bib
+++ b/bioinformatica/publications/Hou2018/references.bib
@@ -1,3 +1,16 @@
+
+@book{Nogrady2005,
+	Address = {New York, {NY}},
+	Author = {Thomas Nogrady and Donald F. Weaver},
+	Doi = {},
+	Edition = {Third},
+	Month = {},
+	Publisher = {Oxford University Press},
+	Series = {},
+	Title = {Medicinal Chemistry: A Molecular and Biochemical Approach},
+	Volume = {},
+	Year = {2005}}
+
 @article{Sutcliffe2004,
 	Address = {Holborn, London, U.K..},
 	Author = {Mike Sutcliffe},
