Fix references for background information.

--- a/bioinformatica/publications/Hou2018/Hou2018.tex
+++ b/bioinformatica/publications/Hou2018/Hou2018.tex
@@ -281,14 +281,18 @@
 	\begin{itemize}
 	\item This facilitates protein structure prediction
 	\item Protein structure prediction enables protein function prediction
-	\item Knowing about protein structure and function facilitates: {\Huge Insert References!!!}
+	\item Knowing about protein structure and function facilitates:
 			\begin{itemize}
-			\item drug/medication design $[$Nogrady2005, \S1.6.4, pp. 54$]$
+			\item drug/medication design $[$Nogrady2005, \S1.6.4, pp. 54$]$ $[$Golan2008, Chapter 1, pp. 4$]$
 				% \cite[\S1.6.4, pp. 54]{Nogrady2005}, application of quantum pharmacology to macromolecular modeling to perform protein structure prediction
-				% \cite{Wecker2010}
-			\item biotechnology
-			\item synthetic biology
-			\item personalized/precision medicine, such as gene therapy $[$Wecker2010, Chapter 5, pp. 51$]$
+				% \cite[Chapter 1, pp. 4]{Golan2008}, conformation and chemistry of drugs and receptors, human and microbial drug receptors
+			\item biotechnology $[$Walsh2014, Chapter 2$]$
+				% \cite[Chapter 2]{Walsh2014}
+			\item synthetic biology $[$Zhao2013d, Chapter 2$]$
+			\item personalized $[$Cullis2015, Chapter 2, pp. 26$]$ or precision medicine $[$Mousa2020, \S24.3.2, pp. 778$]$
+				% \cite[Chapter 2, pp. 26]{Cullis2015}, protein structure determines how we differ from other people
+				% \cite[S24.3.2]{}, immune system is affected abiotically by protein structure
+			\item gene therapy $[$Wecker2010, Chapter 5, pp. 51$]$
 			\end{itemize}
 	\end{itemize}
 }
