--- a/bioinformatica/publications/Hou2018/references.bib
+++ b/bioinformatica/publications/Hou2018/references.bib
@@ -1,3 +1,75 @@
+@book{Mousa2020,
+	Address = {Singapore},
+	Author = {Shaker A. Mousa and Raj Bawa and Gerald F. Audette},
+	Doi = {https://dx.doi.org/10.1201/9780429295010},
+	Edition = {},
+	Month = {},
+	Publisher = {Jenny Stanford Publishing},
+	Series = {Jenny Stanford Series on Nanomedicine},
+	Title = {The Road from Nanomedicine to Precision Medicine},
+	Volume = {4},
+	Year = {2020}}
+
+@book{Cullis2015,
+	Address = {Vancouver, British Columbia, Canada},
+	Author = {Pieter Cullis},
+	Doi = {},
+	Edition = {},
+	Month = {},
+	Publisher = {Greystone Books},
+	Series = {},
+	Title = {The Personalized Medicine Revolution: How Diagnosing and Treating Disease are About to Change Forever},
+	Volume = {},
+	Year = {2015}}
+
+@book{Zhao2013d,
+	Address = {Waltham, {MA}},
+	Author = {Huimin Zhao},
+	Doi = {},
+	Edition = {},
+	Month = {},
+	Publisher = {Academic Press},
+	Series = {},
+	Title = {Synthetic Biology: Tools and Applications},
+	Volume = {},
+	Year = {2013}}
+
+@book{Walsh2014,
+	Address = {Chichester, West Sussex, South East England, England, {U.K.}},
+	Author = {Gary Walsh},
+	Doi = {},
+	Edition = {Second},
+	Month = {},
+	Publisher = {{Wiley-Blackwell}},
+	Series = {},
+	Title = {Proteins: Biochemistry and Biotechnology},
+	Volume = {},
+	Year = {2014}}
+
+@book{Golan2008,
+	Address = {Baltimore, {MD}},
+	Author = {David E. Golan and Armen H. {Tashjian, Jr.} and Ehrin J. Armstrong and April W. Armstrong},
+	Doi = {},
+	Edition = {Second},
+	Month = {},
+	Publisher = {Lippincott Williams {\rm \&}\ Wilkins},
+	Series = {},
+	Title = {Principles of Pharmacology: The Pathophysiologic Basis of Drug Therapy},
+	Volume = {},
+	Year = {2008}}
+
+@book{Wecker2010,
+	Address = {Philadelphia, {PA}},
+	Author = {Lynn Wecker and Lynn Crespo and George Dunaway and Carl Faingold and Stephanie Watts},
+	Doi = {},
+	Edition = {Fifth},
+	Month = {},
+	Publisher = {Mosby, Inc.},
+	Series = {},
+	Title = {Brody's Human Pharmacology: Molecular to Clinical},
+	Volume = {},
+	Year = {2010},
+	Annote = {When citing from this entry, shift the names of the authors from the author field to the editor field.}}
 
 @book{Nogrady2005,
 	Address = {New York, {NY}},
