Add initial slides/template for presentation about \cite{Hou2018}.

--- a/bioinformatica/publications/Hou2018/Hou2018.tex
+++ b/bioinformatica/publications/Hou2018/Hou2018.tex
@@ -280,6 +280,7 @@
 	Why is this problem important?
 	\begin{itemize}
 	\item This facilitates protein structure prediction
+	\item Knowing about protein folds help us in protein structure prediction
 	\item Protein structure prediction enables protein function prediction
 	\item Knowing about protein structure and function facilitates:
 			\begin{itemize}
