Add initial slides/template for presentation about \cite{Hou2018}.

--- a/bioinformatica/publications/Hou2018/Hou2018.tex
+++ b/bioinformatica/publications/Hou2018/Hou2018.tex
@@ -449,6 +449,7 @@
 	\item Use input feature generation and label assignment from PSI-BLAST.
 	\item Specifically, use position-specific scoring matrix
 	\item Train all mini-batches for 100 epochs
+	\item Distance metrics, Euclid, Manh-D, Corr-D, and KL-D
 	\end{itemize}
 }
 
@@ -462,8 +463,8 @@
 	\framesubtitle{Which datasets were used?}
 
 	\begin{itemize}
-	\item SCOP 1.75 was used for training, validation, and test
-	\item SCOP 2.06 and CASP was used for test
+	\item SCOP 1.75 was used for training and validation (\S3.1)
+	\item SCOP 2.06 (\S3.2) and CASP (\S3.3) was used for test
 	\end{itemize}
 }
 
