Add figures/images of tables and figures from the paper.

--- a/bioinformatica/publications/Hou2018/Hou2018.tex
+++ b/bioinformatica/publications/Hou2018/Hou2018.tex
@@ -449,7 +449,13 @@
 	\item Use input feature generation and label assignment from PSI-BLAST.
 	\item Specifically, use position-specific scoring matrix
 	\item Train all mini-batches for 100 epochs
-	\item Distance metrics, Euclid, Manh-D, Corr-D, and KL-D
+	\item Distance metrics
+		\begin{enumerate} 
+		\item Euclid-D, Euclidean distance
+		\item Manh-D, Manhattan distance
+		\item Corr-D, Pearson's Correlation score
+		\item KL-D, KL-Divergence
+		\end{enumerate}
 	\end{itemize}
 }
 
@@ -492,16 +498,73 @@
 	\frametitle{Experimental Results - 1}
 	\framesubtitle{How do their proposed solutions compare with existing solutions?}
 
-	Experimental Results - 1.
-	\begin{itemize}
-	\item 
-	\end{itemize}
 
+	\begin{figure}[h]
+	\centering 
+	\includegraphics[height=2.5in]{./pics/table-1}
+	%\caption{The prediction accuracy at family/superfamily/fold levels for top 1, top 5 and top 10 predictions of DeepSF and PSI-BLAST, on SCOP 1.75 test dataset}
+	\label{fig:Table1}
+	\end{figure}
 }
 
 
 
 
+%	Slide #2
+\frame
+{
+	\frametitle{Experimental Results - 2}
+	\framesubtitle{How do their proposed solutions compare with existing solutions?}
+
+
+	\begin{figure}[h]
+	\centering 
+	\includegraphics[height=2.5in]{./pics/table-2}
+	%\caption{The prediction accuracy at family/superfamily/fold levels for top 1, top 5 and top 10 predictions of DeepSF and PSI-BLAST, on SCOP 1.75 test dataset}
+	\label{fig:Table2}
+	\end{figure}
+}
+
+
+
+
+
+%	Slide #3
+\frame
+{
+	\frametitle{Experimental Results - 3}
+	\framesubtitle{How do their proposed solutions compare with existing solutions?}
+
+
+	\begin{figure}[h]
+	\centering 
+	\includegraphics[height=2.5in]{./pics/table-3}
+	%\caption{The prediction accuracy at family/superfamily/fold levels for top 1, top 5 and top 10 predictions of DeepSF and PSI-BLAST, on SCOP 1.75 test dataset}
+	\label{fig:Table2}
+	\end{figure}
+}
+
+
+
+
+
+
+
+
+%	Slide #3
+\frame
+{
+	\frametitle{Experimental Results - 3}
+	\framesubtitle{How do their proposed solutions compare with existing solutions?}
+
+
+	\begin{figure}[h]
+	\centering 
+	\includegraphics[height=2.2in]{./pics/table-3}
+	\caption{The prediction accuracy at family/superfamily/fold levels for top 1, top 5 and top 10 predictions of DeepSF and PSI-BLAST, on SCOP 1.75 test dataset}
+	\label{fig:Table2}
+	\end{figure}
+}
 
 
 
